styles.css
body{
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #262A53;
}
h1{
    text-align: center;
    color: #FFA0A0;
}
h1 span{
    color: #FFE3E3;
}
main{
    display: flex;
    flex-direction: row;
}
.input_fields{
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
}
#input_section{
    width: 40%;
    padding: 5% 1% 1% 10%;
}
label{
    margin-bottom: 5px;
    color: #FFA0A0;
    font-size: 1.2rem;
    font-weight: 600;
}
input{
    width: 80%;
    border: solid 2px #FFE3E3;
    border-radius: 2px;
    height: 30px;
    color: #262A53;
    font-weight: 600;
    font-family: sans-serif;
}
input:focus{
    border: solid 2px #FFA0A0;
    border-radius: 2px;
}
#output_section{
    width: 50%;
    height: 25rem;
    padding: 20px 60px 30px;
}
#box{
    border: dashed 5px #FFE3E3;
    border-radius: 5px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #FFA0A0;
}
#box span{
    font-size: 2rem;
}
button{
    padding: 10px 20px;
    background-color: #FFA0A0;
    border: solid 2px white;
    border-radius: 2px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 900;
    font-size: 1.2em;
    color: #262A53;
    margin-top: 15px;
}
button:hover{
    cursor: pointer;
    background-color: #FFE3E3;
}

@media screen and (max-width: 768px) {
    main{
        flex-direction: column;
    }
    #input_section{
        width: 80%;
        margin: auto;
        padding: 10px;
    }
    #output_section{
        width: 80%;
        height: 10rem;
        padding: 10px;
        margin: auto;
        margin-bottom: 20px;
    }
}

